Fix workflow to use master-node SSH config and disable other workflows

--- a/.github/workflows/deploy-to-control-node.yml
+++ b/.github/workflows/deploy-to-control-node.yml
@@ -1,10 +1,8 @@
 name: Deploy to Control Node
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:  # Дозволяє запускати вручну
+  # Використовуйте deploy-to-control-node-cgnat.yml для CGNAT
+  workflow_dispatch:  # Тільки ручний запуск
 
 jobs:
   deploy:
