--- a/.github/workflows/deploy-to-control-node-cgnat.yml
+++ b/.github/workflows/deploy-to-control-node-cgnat.yml
@@ -71,10 +71,12 @@ jobs:
           HostName ${{ secrets.CONTROL_NODE_LOCAL_IP }}
           User ${{ secrets.CONTROL_NODE_USER }}
           Port ${CONTROL_NODE_SSH_PORT:-22}
-          ProxyJump master-node
+          ProxyCommand ssh -W %h:%p master-node
           StrictHostKeyChecking no
           ServerAliveInterval 60
           ServerAliveCountMax 3
+          # Використовуємо SSH config з master-node для підключення до macmini7
+          ForwardAgent no
         EOF
         chmod 600 ~/.ssh/config
         
@@ -93,14 +95,24 @@ jobs:
     - name: Test connection to control-node via WireGuard
       run: |
         echo "Testing connection to control-node via WireGuard tunnel..."
-        ssh -o ConnectTimeout=10 control-node "echo '✅ Connected to control-node' && hostname"
+        # Виконуємо SSH команду через master-node
+        # Використовуємо hostname 'macmini7' з SSH config на master-node, або IP якщо config не працює
+        ssh master-node "ssh -o ConnectTimeout=10 -F ~/.ssh/config macmini7 'echo ✅ Connected to control-node && hostname' || \
+          ssh -o ConnectTimeout=10 ${{ secrets.CONTROL_NODE_USER }}@${{ secrets.CONTROL_NODE_LOCAL_IP }} 'echo ✅ Connected to control-node && hostname'"
         
     - name: Deploy files to control node via WireGuard tunnel
       run: |
-        # Створюємо директорію на control node
-        ssh control-node "mkdir -p ${{ secrets.DEPLOY_PATH }}"
+        # Створюємо директорію на control node через master-node
+        # Спробуємо використати hostname з SSH config, якщо не працює - використаємо IP
+        ssh master-node "ssh -F ~/.ssh/config macmini7 'mkdir -p ${{ secrets.DEPLOY_PATH }}' || \
+          ssh ${{ secrets.CONTROL_NODE_USER }}@${{ secrets.CONTROL_NODE_LOCAL_IP }} 'mkdir -p ${{ secrets.DEPLOY_PATH }}'"
         
-        # Копіюємо файли через rsync через master-node та WireGuard tunnel
+        # Копіюємо файли: спочатку на master-node, потім на macmini7
+        # Створюємо тимчасову директорію на master-node
+        TEMP_DIR="/tmp/k3s-deploy-$$"
+        ssh master-node "mkdir -p $TEMP_DIR"
+        
+        # Копіюємо файли на master-node
         rsync -avz --delete \
           -e "ssh -F ~/.ssh/config" \
           --exclude='.git' \
@@ -108,9 +120,18 @@ jobs:
           --exclude='*.local' \
           --exclude='.github' \
           ./ \
-          control-node:${{ secrets.DEPLOY_PATH }}/
+          master-node:$TEMP_DIR/
+        
+        # Копіюємо файли з master-node на macmini7 через WireGuard
+        # Використовуємо hostname 'macmini7' з SSH config на master-node
+        ssh master-node "rsync -avz --delete \
+          -e 'ssh -F ~/.ssh/config' \
+          $TEMP_DIR/ \
+          macmini7:${{ secrets.DEPLOY_PATH }}/ && \
+          rm -rf $TEMP_DIR"
         
     - name: Verify deployment
       run: |
-        ssh control-node "ls -la ${{ secrets.DEPLOY_PATH }} && echo 'Deployment successful!'"
+        ssh master-node "ssh -F ~/.ssh/config macmini7 'ls -la ${{ secrets.DEPLOY_PATH }} && echo Deployment successful!' || \
+          ssh ${{ secrets.CONTROL_NODE_USER }}@${{ secrets.CONTROL_NODE_LOCAL_IP }} 'ls -la ${{ secrets.DEPLOY_PATH }} && echo Deployment successful!'"
 
