--- a/.github/workflows/deploy-to-control-node-nat.yml
+++ b/.github/workflows/deploy-to-control-node-nat.yml
@@ -1,10 +1,8 @@
 name: Deploy to Control Node (NAT with Jump Host)
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  # Використовуйте deploy-to-control-node-cgnat.yml для master-node + WireGuard
+  workflow_dispatch:  # Тільки ручний запуск
 
 jobs:
   deploy:
