Set HOME variable and use full path to ssh for rsync on master-node

--- a/.github/workflows/deploy-to-control-node-cgnat.yml
+++ b/.github/workflows/deploy-to-control-node-cgnat.yml
@@ -123,9 +123,9 @@ jobs:
           master-node:$TEMP_DIR/
         
         # Копіюємо файли з master-node на macmini7 через WireGuard
-        # Використовуємо абсолютний шлях до SSH config, оскільки ~ не розширюється в контексті SSH команди
-        ssh master-node "rsync -avz --delete \
-          -e 'ssh -F /home/ubuntu/.ssh/config' \
+        # Встановлюємо HOME та використовуємо абсолютний шлях до SSH config
+        ssh master-node "HOME=/home/ubuntu rsync -avz --delete \
+          -e '/usr/bin/ssh -F /home/ubuntu/.ssh/config' \
           $TEMP_DIR/ \
           macmini7:${{ secrets.DEPLOY_PATH }}/ && \
           rm -rf $TEMP_DIR"
