--- a/.github/workflows/deploy-to-control-node-cgnat.yml
+++ b/.github/workflows/deploy-to-control-node-cgnat.yml
@@ -125,14 +125,9 @@ jobs:
         # Копіюємо файли з master-node на macmini7 через WireGuard
         # Використовуємо SSH опції безпосередньо, не залежачи від config файлу
         # SSH ключ знаходиться на master-node: ~/.ssh/id_ed25519_macmini7
-        # Спочатку пробуємо з hostname macmini7 (якщо config працює), потім з IP адресою
+        # Використовуємо IP адресу напряму та явно вимикаємо config файл через -F /dev/null
         ssh master-node "rsync -avz --delete \
-          -e 'ssh -i /home/ubuntu/.ssh/id_ed25519_macmini7 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ServerAliveInterval=60 -o ServerAliveCountMax=3' \
-          $TEMP_DIR/ \
-          macmini7:${{ secrets.DEPLOY_PATH }}/ && \
-          rm -rf $TEMP_DIR" || \
-        ssh master-node "rsync -avz --delete \
-          -e 'ssh -i /home/ubuntu/.ssh/id_ed25519_macmini7 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ServerAliveInterval=60 -o ServerAliveCountMax=3' \
+          -e 'ssh -F /dev/null -i /home/ubuntu/.ssh/id_ed25519_macmini7 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ServerAliveInterval=60 -o ServerAliveCountMax=3' \
           $TEMP_DIR/ \
           ${{ secrets.CONTROL_NODE_USER }}@${{ secrets.CONTROL_NODE_LOCAL_IP }}:${{ secrets.DEPLOY_PATH }}/ && \
           rm -rf $TEMP_DIR"
