--- a/.github/workflows/deploy-to-control-node-cgnat.yml
+++ b/.github/workflows/deploy-to-control-node-cgnat.yml
@@ -95,17 +95,14 @@ jobs:
     - name: Test connection to control-node via WireGuard
       run: |
         echo "Testing connection to control-node via WireGuard tunnel..."
-        # Виконуємо SSH команду через master-node
-        # SSH автоматично використовує ~/.ssh/config, тому не потрібно вказувати -F
-        ssh master-node "ssh -o ConnectTimeout=10 macmini7 'echo ✅ Connected to control-node && hostname' || \
-          ssh -o ConnectTimeout=10 ${{ secrets.CONTROL_NODE_USER }}@${{ secrets.CONTROL_NODE_LOCAL_IP }} 'echo ✅ Connected to control-node && hostname'"
+        # Виконуємо SSH команду через master-node з явними SSH опціями
+        ssh master-node "ssh -F /dev/null -i /home/ubuntu/.ssh/id_ed25519_macmini7 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=10 ${{ secrets.CONTROL_NODE_USER }}@${{ secrets.CONTROL_NODE_LOCAL_IP }} 'echo ✅ Connected to control-node && hostname'"
         
     - name: Deploy files to control node via WireGuard tunnel
       run: |
         # Створюємо директорію на control node через master-node
-        # SSH автоматично використовує ~/.ssh/config на master-node
-        ssh master-node "ssh macmini7 'mkdir -p ${{ secrets.DEPLOY_PATH }}' || \
-          ssh ${{ secrets.CONTROL_NODE_USER }}@${{ secrets.CONTROL_NODE_LOCAL_IP }} 'mkdir -p ${{ secrets.DEPLOY_PATH }}'"
+        # Використовуємо SSH опції безпосередньо, не залежачи від config файлу
+        ssh master-node "ssh -F /dev/null -i /home/ubuntu/.ssh/id_ed25519_macmini7 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.CONTROL_NODE_USER }}@${{ secrets.CONTROL_NODE_LOCAL_IP }} 'mkdir -p ${{ secrets.DEPLOY_PATH }}'"
         
         # Копіюємо файли: спочатку на master-node, потім на macmini7
         # Створюємо тимчасову директорію на master-node
@@ -134,6 +131,5 @@ jobs:
         
     - name: Verify deployment
       run: |
-        ssh master-node "ssh macmini7 'ls -la ${{ secrets.DEPLOY_PATH }} && echo Deployment successful!' || \
-          ssh ${{ secrets.CONTROL_NODE_USER }}@${{ secrets.CONTROL_NODE_LOCAL_IP }} 'ls -la ${{ secrets.DEPLOY_PATH }} && echo Deployment successful!'"
+        ssh master-node "ssh -F /dev/null -i /home/ubuntu/.ssh/id_ed25519_macmini7 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${{ secrets.CONTROL_NODE_USER }}@${{ secrets.CONTROL_NODE_LOCAL_IP }} 'ls -la ${{ secrets.DEPLOY_PATH }} && echo Deployment successful!'"
 
