--- a/.github/workflows/deploy-to-control-node-cgnat.yml
+++ b/.github/workflows/deploy-to-control-node-cgnat.yml
@@ -120,11 +120,14 @@ jobs:
           master-node:$TEMP_DIR/
         
         # Копіюємо файли з master-node на macmini7 через WireGuard
+        # Спочатку перевіряємо, що SSH ключ існує та має правильні права
+        ssh master-node "test -f /home/ubuntu/.ssh/id_ed25519_macmini7 && chmod 600 /home/ubuntu/.ssh/id_ed25519_macmini7 && echo '✅ SSH key found and permissions set' || echo '❌ SSH key not found'"
+        
         # Використовуємо SSH опції безпосередньо, не залежачи від config файлу
-        # SSH ключ знаходиться на master-node: ~/.ssh/id_ed25519_macmini7
-        # Використовуємо IP адресу напряму та явно вимикаємо config файл через -F /dev/null
-        ssh master-node "rsync -avz --delete \
-          -e 'ssh -F /dev/null -i /home/ubuntu/.ssh/id_ed25519_macmini7 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ServerAliveInterval=60 -o ServerAliveCountMax=3' \
+        # Встановлюємо HOME та використовуємо абсолютний шлях до ssh
+        # Використовуємо змінну середовища SSH_CONFIG_FILE для вимкнення config файлу
+        ssh master-node "HOME=/home/ubuntu SSH_CONFIG_FILE=/dev/null rsync -avz --delete \
+          -e '/usr/bin/ssh -F /dev/null -i /home/ubuntu/.ssh/id_ed25519_macmini7 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ServerAliveInterval=60 -o ServerAliveCountMax=3' \
           $TEMP_DIR/ \
           ${{ secrets.CONTROL_NODE_USER }}@${{ secrets.CONTROL_NODE_LOCAL_IP }}:${{ secrets.DEPLOY_PATH }}/ && \
           rm -rf $TEMP_DIR"
