--- a/manifests/portainer/serviceaccount.yaml
+++ b/manifests/portainer/serviceaccount.yaml
@@ -11,31 +11,32 @@ metadata:
 rules:
 - apiGroups: [""]
   resources:
-  - nodes
-  - nodes/proxy
-  - services
-  - endpoints
-  - pods
-  - namespaces
-  - events
-  - configmaps
-  - secrets
-  verbs: ["get", "list"]
+  - "*"
+  verbs: ["*"]
 - apiGroups: ["apps"]
   resources:
-  - deployments
-  - daemonsets
-  - replicasets
-  - statefulsets
-  verbs: ["get", "list"]
+  - "*"
+  verbs: ["*"]
 - apiGroups: ["networking.k8s.io"]
   resources:
-  - ingresses
-  verbs: ["get", "list"]
+  - "*"
+  verbs: ["*"]
 - apiGroups: ["storage.k8s.io"]
   resources:
-  - storageclasses
-  verbs: ["get", "list"]
+  - "*"
+  verbs: ["*"]
+- apiGroups: ["batch"]
+  resources:
+  - "*"
+  verbs: ["*"]
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources:
+  - "*"
+  verbs: ["*"]
+- apiGroups: ["apiextensions.k8s.io"]
+  resources:
+  - "*"
+  verbs: ["*"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
