Update for portainer agent

--- a/manifests/portainer-agent/deployment.yaml
+++ b/manifests/portainer-agent/deployment.yaml
@@ -33,6 +33,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
+        - name: AGENT_CLUSTER_ADDR
+          value: "0.0.0.0:9001"
+        - name: AGENT_SECRET
+          value: ""
         ports:
         - containerPort: 9001
           name: http
