--- a/manifests/portainer/serviceaccount.yaml
+++ b/manifests/portainer/serviceaccount.yaml
@@ -33,6 +33,10 @@ rules:
   resources:
   - "*"
   verbs: ["*"]
+- apiGroups: ["authorization.k8s.io"]
+  resources:
+  - "*"
+  verbs: ["*"]
 - apiGroups: ["apiextensions.k8s.io"]
   resources:
   - "*"
