--- a/manifests/portainer/serviceaccount.yaml
+++ b/manifests/portainer/serviceaccount.yaml
@@ -37,6 +37,10 @@ rules:
   resources:
   - "*"
   verbs: ["*"]
+- apiGroups: ["autoscaling"]
+  resources:
+  - "*"
+  verbs: ["*"]
 - apiGroups: ["apiextensions.k8s.io"]
   resources:
   - "*"
