--- a/manifests/monitoring/prometheus/deployment-fix-permissions.yaml
+++ b/manifests/monitoring/prometheus/deployment-fix-permissions.yaml
@@ -1,3 +1,7 @@
+# Альтернативний варіант deployment з root правами
+# Використовуйте цей варіант, якщо initContainer не допомагає
+# або якщо OCFS2 volume потребує root доступу
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,32 +20,12 @@ spec:
         app: prometheus
     spec:
       serviceAccountName: prometheus
-      # Security context для правильних прав доступу до volume
+      # Альтернативний варіант: використання root (менш безпечно, але може бути необхідно для OCFS2)
       securityContext:
-        fsGroup: 65534  # nobody group - автоматично встановить права на volume
-        runAsUser: 65534  # nobody user
-        runAsGroup: 65534  # nobody group
-        runAsNonRoot: true
-        seccompProfile:
-          type: RuntimeDefault
-      # Init container для встановлення правильних прав на директорію
-      # Якщо Pod Security Policy не дозволяє root, використайте deployment-fix-permissions.yaml
-      initContainers:
-      - name: fix-prometheus-permissions
-        image: busybox:1.36
-        command: ['sh', '-c']
-        args:
-          - |
-            # Встановлюємо права на директорію для користувача 65534 (nobody)
-            chown -R 65534:65534 /prometheus || true
-            chmod -R 755 /prometheus || true
-        securityContext:
-          runAsUser: 0  # root для зміни прав (може не працювати з Pod Security Policy)
-          runAsGroup: 0
-          runAsNonRoot: false
-        volumeMounts:
-        - name: prometheus-storage
-          mountPath: /prometheus
+        fsGroup: 0  # root group
+        runAsUser: 0  # root user
+        runAsGroup: 0  # root group
+        runAsNonRoot: false
       containers:
       - name: prometheus
         image: prom/prometheus:v2.48.0
@@ -61,16 +45,10 @@ spec:
         - name: prometheus-storage
           mountPath: /prometheus
         securityContext:
-          runAsUser: 65534
-          runAsGroup: 65534
-          runAsNonRoot: true
+          runAsUser: 0
+          runAsGroup: 0
+          runAsNonRoot: false
           allowPrivilegeEscalation: false
-          readOnlyRootFilesystem: false  # Prometheus потребує запису
-          capabilities:
-            drop:
-              - ALL
-          seccompProfile:
-            type: RuntimeDefault
         resources:
           requests:
             memory: "512Mi"
