--- a/manifests/monitoring/grafana/secret.yaml
+++ b/manifests/monitoring/grafana/secret.yaml
@@ -8,4 +8,4 @@ metadata:
 type: Opaque
 stringData:
   admin-user: admin
-  admin-password: admin  # ЗМІНІТЬ ПРИ РОЗГОРТАННІ!
+  admin-password: Zteuser_2015
