--- a/manifests/monitoring/prometheus/deployment-with-tmpfs.yaml
+++ b/manifests/monitoring/prometheus/deployment-with-tmpfs.yaml
@@ -1,3 +1,6 @@
+# Альтернативний варіант з tmpfs для queries.active
+# Використовуйте цей варіант, якщо fsGroup не працює для OCFS2 volume
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,32 +19,13 @@ spec:
         app: prometheus
     spec:
       serviceAccountName: prometheus
-      # Security context для правильних прав доступу до volume
       securityContext:
-        fsGroup: 65534  # nobody group - автоматично встановить права на volume
-        runAsUser: 65534  # nobody user
-        runAsGroup: 65534  # nobody group
+        fsGroup: 65534
+        runAsUser: 65534
+        runAsGroup: 65534
         runAsNonRoot: true
         seccompProfile:
           type: RuntimeDefault
-      # Init container для встановлення правильних прав на директорію
-      # Якщо Pod Security Policy не дозволяє root, використайте deployment-fix-permissions.yaml
-      initContainers:
-      - name: fix-prometheus-permissions
-        image: busybox:1.36
-        command: ['sh', '-c']
-        args:
-          - |
-            # Встановлюємо права на директорію для користувача 65534 (nobody)
-            chown -R 65534:65534 /prometheus || true
-            chmod -R 755 /prometheus || true
-        securityContext:
-          runAsUser: 0  # root для зміни прав (може не працювати з Pod Security Policy)
-          runAsGroup: 0
-          runAsNonRoot: false
-        volumeMounts:
-        - name: prometheus-storage
-          mountPath: /prometheus
       containers:
       - name: prometheus
         image: prom/prometheus:v2.48.0
@@ -52,6 +36,7 @@ spec:
           - '--web.console.libraries=/usr/share/prometheus/console_libraries'
           - '--web.console.templates=/usr/share/prometheus/consoles'
           - '--web.enable-lifecycle'
+          - '--query.active-query-log-file=/tmp/queries.active'  # Використовуємо tmpfs замість /prometheus
         ports:
         - containerPort: 9090
           name: http
@@ -60,12 +45,14 @@ spec:
           mountPath: /etc/prometheus
         - name: prometheus-storage
           mountPath: /prometheus
+        - name: tmp-queries
+          mountPath: /tmp
         securityContext:
           runAsUser: 65534
           runAsGroup: 65534
           runAsNonRoot: true
           allowPrivilegeEscalation: false
-          readOnlyRootFilesystem: false  # Prometheus потребує запису
+          readOnlyRootFilesystem: false
           capabilities:
             drop:
               - ALL
@@ -97,3 +84,5 @@ spec:
       - name: prometheus-storage
         persistentVolumeClaim:
           claimName: prometheus-data
+      - name: tmp-queries
+        emptyDir: {}  # tmpfs для queries.active файлу
