--- a/manifests/monitoring/prometheus/configmap.yaml
+++ b/manifests/monitoring/prometheus/configmap.yaml
@@ -111,19 +111,22 @@ data:
           - targets: ['kube-state-metrics:8080']
 
       # cAdvisor (вбудований в k3s)
-      - job_name: 'cadvisor'
-        kubernetes_sd_configs:
-          - role: node
-        scheme: https
-        tls_config:
-          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-        relabel_configs:
-          - action: labelmap
-            regex: __meta_kubernetes_node_label_(.+)
-          - target_label: __address__
-            replacement: kubernetes.default.svc:443
-          - source_labels: [__meta_kubernetes_node_name]
-            regex: (.+)
-            target_label: __metrics_path__
-            replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+      # ВИМКНЕНО: В k3s доступ до cadvisor через API proxy часто обмежений
+      # Використовуйте Node Exporter для метрик контейнерів (вже налаштовано вище)
+      # Якщо потрібен cadvisor, налаштуйте прямий доступ або додайте додаткові права
+      # - job_name: 'cadvisor'
+      #   kubernetes_sd_configs:
+      #     - role: node
+      #   scheme: https
+      #   tls_config:
+      #     ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+      #     bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+      #   relabel_configs:
+      #     - action: labelmap
+      #       regex: __meta_kubernetes_node_label_(.+)
+      #     - target_label: __address__
+      #       replacement: kubernetes.default.svc:443
+      #     - source_labels: [__meta_kubernetes_node_name]
+      #       regex: (.+)
+      #       target_label: __metrics_path__
+      #       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
