Update Prometheus and SNMP exporter configurations to include new authentication method and improve DNS resolution; remove deprecated auth references and add comments for clarity.

--- a/manifests/monitoring/prometheus/deployment.yaml
+++ b/manifests/monitoring/prometheus/deployment.yaml
@@ -15,7 +15,11 @@ spec:
       labels:
         app: prometheus
     spec:
+      dnsPolicy: ClusterFirst
       serviceAccountName: prometheus
+      # If DNS works only on a specific node in your cluster, you can pin Prometheus there:
+      # nodeSelector:
+      #   kubernetes.io/hostname: macmini7
       # Security context для правильних прав доступу до volume
       securityContext:
         fsGroup: 65534  # nobody group - автоматично встановить права на volume
