--- a/manifests/monitoring/prometheus/configmap.yaml
+++ b/manifests/monitoring/prometheus/configmap.yaml
@@ -83,6 +83,7 @@ data:
         metrics_path: /snmp
         params:
           module: [router]
+          auth: [public_v2]
         relabel_configs:
           - source_labels: [__address__]
             target_label: __param_target
@@ -98,4 +99,5 @@ data:
           - source_labels: [__param_target]
             target_label: instance
           - target_label: __address__
-            replacement: snmp-exporter:9116
+            # Use FQDN to avoid reliance on search domains
+            replacement: snmp-exporter.monitoring.svc.cluster.local:9116
