--- a/manifests/monitoring/snmp-exporter/configmap.yaml
+++ b/manifests/monitoring/snmp-exporter/configmap.yaml
@@ -7,14 +7,16 @@ metadata:
     app: snmp-exporter
 data:
   snmp.yml: |
+    # snmp-exporter v0.25+ config (auth-split)
+    # IMPORTANT:
+    # - Do NOT set auth/version/lookups inside modules in this format
+    # - Prometheus must pass ?auth=public_v2 (or rely on the default)
+
     auths:
-      router_auth:
-        version: 2
-        community: dfktyrb1
       public_v2:
         version: 2
         community: dfktyrb1
-    
+
     modules:
       unifi_ucg:
         walk:
@@ -25,11 +27,10 @@ data:
           - 1.3.6.1.2.1.6
           - 1.3.6.1.2.1.7
           - 1.3.6.1.2.1.31.1.1
-        auth_name: router_auth
         max_repetitions: 25
         retries: 3
         timeout: 30s
-      
+
       edgerouter_x:
         walk:
           - 1.3.6.1.2.1.1
@@ -39,11 +40,10 @@ data:
           - 1.3.6.1.2.1.6
           - 1.3.6.1.2.1.7
           - 1.3.6.1.2.1.31.1.1
-        auth_name: router_auth
         max_repetitions: 25
         retries: 3
         timeout: 30s
-      
+
       router:
         walk:
           - 1.3.6.1.2.1.1
@@ -52,7 +52,6 @@ data:
           - 1.3.6.1.2.1.5
           - 1.3.6.1.2.1.6
           - 1.3.6.1.2.1.7
-        auth_name: router_auth
         max_repetitions: 25
         retries: 3
         timeout: 30s
