--- a/manifests/monitoring/snmp-exporter/configmap.yaml
+++ b/manifests/monitoring/snmp-exporter/configmap.yaml
@@ -20,16 +20,13 @@ data:
     modules:
       unifi_ucg:
         walk:
-          - 1.3.6.1.2.1.1
-          - 1.3.6.1.2.1.2
-          - 1.3.6.1.2.1.4
-          - 1.3.6.1.2.1.5
-          - 1.3.6.1.2.1.6
-          - 1.3.6.1.2.1.7
-          - 1.3.6.1.2.1.31.1.1
+          # Keep this module lightweight first; expand later if needed.
+          - 1.3.6.1.2.1.1          # system
+          - 1.3.6.1.2.1.2          # interfaces
+          - 1.3.6.1.2.1.31.1.1     # ifXTable (64-bit counters)
         max_repetitions: 25
-        retries: 3
-        timeout: 30s
+        retries: 1
+        timeout: 10s
 
       edgerouter_x:
         walk:
