--- a/manifests/monitoring/snmp-exporter/configmap.yaml
+++ b/manifests/monitoring/snmp-exporter/configmap.yaml
@@ -24,6 +24,50 @@ data:
           - 1.3.6.1.2.1.1          # system
           - 1.3.6.1.2.1.2          # interfaces
           - 1.3.6.1.2.1.31.1.1     # ifXTable (64-bit counters)
+        # Minimal metric mapping (so Grafana can use snmp_sysUpTime / snmp_ifHC* / snmp_if* names)
+        metrics:
+          - name: sysUpTime
+            oid: 1.3.6.1.2.1.1.3
+            type: gauge
+          - name: sysName
+            oid: 1.3.6.1.2.1.1.5
+            type: DisplayString
+          - name: ifDescr
+            oid: 1.3.6.1.2.1.2.2.1.2
+            type: DisplayString
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifOperStatus
+            oid: 1.3.6.1.2.1.2.2.1.8
+            type: gauge
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifInErrors
+            oid: 1.3.6.1.2.1.2.2.1.14
+            type: counter
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifOutErrors
+            oid: 1.3.6.1.2.1.2.2.1.20
+            type: counter
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifHCInOctets
+            oid: 1.3.6.1.2.1.31.1.1.1.6
+            type: counter
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifHCOutOctets
+            oid: 1.3.6.1.2.1.31.1.1.1.10
+            type: counter
+            indexes:
+              - labelname: ifIndex
+                type: gauge
         max_repetitions: 25
         retries: 1
         timeout: 10s
@@ -37,6 +81,49 @@ data:
           - 1.3.6.1.2.1.6
           - 1.3.6.1.2.1.7
           - 1.3.6.1.2.1.31.1.1
+        metrics:
+          - name: sysUpTime
+            oid: 1.3.6.1.2.1.1.3
+            type: gauge
+          - name: sysName
+            oid: 1.3.6.1.2.1.1.5
+            type: DisplayString
+          - name: ifDescr
+            oid: 1.3.6.1.2.1.2.2.1.2
+            type: DisplayString
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifOperStatus
+            oid: 1.3.6.1.2.1.2.2.1.8
+            type: gauge
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifInErrors
+            oid: 1.3.6.1.2.1.2.2.1.14
+            type: counter
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifOutErrors
+            oid: 1.3.6.1.2.1.2.2.1.20
+            type: counter
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifHCInOctets
+            oid: 1.3.6.1.2.1.31.1.1.1.6
+            type: counter
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifHCOutOctets
+            oid: 1.3.6.1.2.1.31.1.1.1.10
+            type: counter
+            indexes:
+              - labelname: ifIndex
+                type: gauge
         max_repetitions: 25
         retries: 3
         timeout: 30s
@@ -49,6 +136,37 @@ data:
           - 1.3.6.1.2.1.5
           - 1.3.6.1.2.1.6
           - 1.3.6.1.2.1.7
+        metrics:
+          - name: sysUpTime
+            oid: 1.3.6.1.2.1.1.3
+            type: gauge
+          - name: sysName
+            oid: 1.3.6.1.2.1.1.5
+            type: DisplayString
+          - name: ifDescr
+            oid: 1.3.6.1.2.1.2.2.1.2
+            type: DisplayString
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifOperStatus
+            oid: 1.3.6.1.2.1.2.2.1.8
+            type: gauge
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifInErrors
+            oid: 1.3.6.1.2.1.2.2.1.14
+            type: counter
+            indexes:
+              - labelname: ifIndex
+                type: gauge
+          - name: ifOutErrors
+            oid: 1.3.6.1.2.1.2.2.1.20
+            type: counter
+            indexes:
+              - labelname: ifIndex
+                type: gauge
         max_repetitions: 25
         retries: 3
         timeout: 30s
