--- a/manifests/monitoring/grafana/configmap-dashboards.yaml
+++ b/manifests/monitoring/grafana/configmap-dashboards.yaml
@@ -116,12 +116,14 @@ data:
           "targets": [
             {
               "editorMode": "code",
-              "expr": "up{job=\"snmp-routers\", instance=~\"$instance\"}",
+              "expr": "up{job=\"snmp-routers\", router_name=~\"$router\"}",
               "legendFormat": "{{router_name}} ({{instance}})",
               "range": true,
               "refId": "A"
             }
           ],
+          "repeat": "router",
+          "repeatDirection": "h",
           "title": "Router availability (UP/DOWN)",
           "type": "stat"
         },
@@ -161,12 +163,14 @@ data:
           "targets": [
             {
               "editorMode": "code",
-              "expr": "sysUpTime{job=\"snmp-routers\", instance=~\"$instance\"} / 360000",
+              "expr": "sysUpTime{job=\"snmp-routers\", router_name=~\"$router\"} / 360000",
               "legendFormat": "{{router_name}}",
               "range": true,
               "refId": "A"
             }
           ],
+          "repeat": "router",
+          "repeatDirection": "h",
           "title": "Uptime (hours)",
           "type": "stat"
         },
@@ -206,19 +210,21 @@ data:
           "targets": [
             {
               "editorMode": "code",
-              "expr": "topk(10, rate(ifHCInOctets{job=\"snmp-routers\", instance=~\"$instance\"}[5m]) * 8) * on(instance, ifIndex) group_left(ifDescr) ifDescr{job=\"snmp-routers\", instance=~\"$instance\"}",
+              "expr": "topk(10, rate(ifHCInOctets{job=\"snmp-routers\", router_name=~\"$router\"}[5m]) * 8) * on(instance, ifIndex) group_left(ifDescr) ifDescr{job=\"snmp-routers\", router_name=~\"$router\"}",
               "legendFormat": "in {{ifDescr}}",
               "range": true,
               "refId": "A"
             },
             {
               "editorMode": "code",
-              "expr": "topk(10, rate(ifHCOutOctets{job=\"snmp-routers\", instance=~\"$instance\"}[5m]) * 8) * on(instance, ifIndex) group_left(ifDescr) ifDescr{job=\"snmp-routers\", instance=~\"$instance\"}",
+              "expr": "topk(10, rate(ifHCOutOctets{job=\"snmp-routers\", router_name=~\"$router\"}[5m]) * 8) * on(instance, ifIndex) group_left(ifDescr) ifDescr{job=\"snmp-routers\", router_name=~\"$router\"}",
               "legendFormat": "out {{ifDescr}}",
               "range": true,
               "refId": "B"
             }
           ],
+          "repeat": "router",
+          "repeatDirection": "h",
           "title": "Top interface traffic (bps) — ifHC* counters",
           "type": "timeseries"
         },
@@ -258,19 +264,21 @@ data:
           "targets": [
             {
               "editorMode": "code",
-              "expr": "topk(10, rate(ifInErrors{job=\"snmp-routers\", instance=~\"$instance\"}[5m])) * on(instance, ifIndex) group_left(ifDescr) ifDescr{job=\"snmp-routers\", instance=~\"$instance\"}",
+              "expr": "topk(10, rate(ifInErrors{job=\"snmp-routers\", router_name=~\"$router\"}[5m])) * on(instance, ifIndex) group_left(ifDescr) ifDescr{job=\"snmp-routers\", router_name=~\"$router\"}",
               "legendFormat": "inErrors {{ifDescr}}",
               "range": true,
               "refId": "A"
             },
             {
               "editorMode": "code",
-              "expr": "topk(10, rate(ifOutErrors{job=\"snmp-routers\", instance=~\"$instance\"}[5m])) * on(instance, ifIndex) group_left(ifDescr) ifDescr{job=\"snmp-routers\", instance=~\"$instance\"}",
+              "expr": "topk(10, rate(ifOutErrors{job=\"snmp-routers\", router_name=~\"$router\"}[5m])) * on(instance, ifIndex) group_left(ifDescr) ifDescr{job=\"snmp-routers\", router_name=~\"$router\"}",
               "legendFormat": "outErrors {{ifDescr}}",
               "range": true,
               "refId": "B"
             }
           ],
+          "repeat": "router",
+          "repeatDirection": "h",
           "title": "Top interface errors (per second)",
           "type": "timeseries"
         },
@@ -310,12 +318,14 @@ data:
           "targets": [
             {
               "editorMode": "code",
-              "expr": "ifOperStatus{job=\"snmp-routers\", instance=~\"$instance\"} * on(instance, ifIndex) group_left(ifDescr) ifDescr{job=\"snmp-routers\", instance=~\"$instance\"}",
+              "expr": "ifOperStatus{job=\"snmp-routers\", router_name=~\"$router\"} * on(instance, ifIndex) group_left(ifDescr) ifDescr{job=\"snmp-routers\", router_name=~\"$router\"}",
               "legendFormat": "{{ifDescr}} operStatus",
               "range": true,
               "refId": "A"
             }
           ],
+          "repeat": "router",
+          "repeatDirection": "h",
           "title": "Interface oper status (1=up, 2=down)",
           "type": "timeseries"
         }
@@ -351,23 +361,26 @@ data:
           },
           {
             "current": {
-              "selected": true,
-              "text": "All",
-              "value": ".*"
+              "selected": false,
+              "text": "vrn625 + syhiv17",
+              "value": [
+                "vrn625",
+                "syhiv17"
+              ]
             },
             "datasource": {
               "type": "prometheus",
               "uid": "${DS_PROMETHEUS}"
             },
-            "definition": "label_values(up{job=\"snmp-routers\"}, instance)",
+            "definition": "label_values(up{job=\"snmp-routers\"}, router_name)",
             "hide": 0,
-            "includeAll": true,
-            "label": "Router instance",
+            "includeAll": false,
+            "label": "Routers",
             "multi": true,
-            "name": "instance",
+            "name": "router",
             "options": [],
             "query": {
-              "query": "label_values(up{job=\"snmp-routers\"}, instance)",
+              "query": "label_values(up{job=\"snmp-routers\"}, router_name)",
               "refId": "PrometheusVariableQueryEditor-VariableQuery"
             },
             "refresh": 2,
