Add entrypoint annotation for Grafana ingress resource to support Traefik routing

--- a/manifests/monitoring/grafana/ingress.yaml
+++ b/manifests/monitoring/grafana/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: monitoring
   annotations:
     kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   ingressClassName: traefik
   rules:
