--- a/manifests/monitoring/grafana/ingress.yaml
+++ b/manifests/monitoring/grafana/ingress.yaml
@@ -4,8 +4,11 @@ metadata:
   name: grafana
   namespace: monitoring
   annotations:
+    # k3s Traefik інколи дивиться тільки на annotation class (а не ingressClassName),
+    # тому залишаємо обидва механізми + явно задаємо правило і entrypoint.
     kubernetes.io/ingress.class: traefik
     traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.rule: Host(`monitoring.lan`)
 spec:
   ingressClassName: traefik
   rules:
