Update Grafana ingressroute to include websecure entry point and refine routing match for improved access control.

--- a/manifests/monitoring/grafana/ingressroute.yaml
+++ b/manifests/monitoring/grafana/ingressroute.yaml
@@ -6,9 +6,10 @@ metadata:
 spec:
   entryPoints:
   - web
+  - websecure
   routes:
   - kind: Rule
-    match: Host(`monitoring.lan`)
+    match: Host(`monitoring.lan`) && PathPrefix(`/`)
     services:
     - name: grafana
       port: 3000
