--- a/manifests/traefik/helmchartconfig.yaml
+++ b/manifests/traefik/helmchartconfig.yaml
@@ -16,6 +16,6 @@ spec:
     # 192.168.2.19:6443 — API server k3s у вашій мережі (див. prometheus job kubernetes-apiservers).
     additionalArguments:
       - "--providers.kubernetesingress.endpoint=https://192.168.2.19:6443"
-      - "--providers.kubernetesingress.insecureSkipVerify=true"
+      - "--providers.kubernetesingress.tls.insecureSkipVerify=true"
       - "--providers.kubernetescrd.endpoint=https://192.168.2.19:6443"
-      - "--providers.kubernetescrd.insecureSkipVerify=true"
+      - "--providers.kubernetescrd.tls.insecureSkipVerify=true"
